@@ -1,9 +1,14 @@
 package br.com.lata.velha.ordem_servico.infrastructure.persistence.mappers;
 
+import br.com.lata.velha.ordem_servico.domain.entities.ExecucaoServico;
 import br.com.lata.velha.ordem_servico.domain.entities.OrdemServico;
 import br.com.lata.velha.ordem_servico.infrastructure.persistence.entities.OrdemServicoEntity;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Component;
+
+import java.util.ArrayList;
+import java.util.List;
+import java.util.stream.Collectors;
 
 @Component
 @RequiredArgsConstructor
@@ -12,36 +17,31 @@ public class OrdemServicoMapper {
     private final ExecucaoServicoMapper execucaoServicoMapper;
 
     public OrdemServico toDomain(OrdemServicoEntity entity) {
-
         if (entity == null) {
             return null;
         }
 
-        OrdemServico os = new OrdemServico(
+        List<ExecucaoServico> execucoes = new ArrayList<>();
+        if (entity.getServicos() != null) {
+            execucoes = entity.getServicos().stream()
+                    .map(execucaoServicoMapper::toDomain)
+                    .collect(Collectors.toList());
+        }
+
+        return new OrdemServico(
                 entity.getId(),
                 entity.getProprietarioId(),
                 entity.getVeiculoId(),
                 entity.getReclamacaoCliente(),
-                entity.getAtendenteInicioId()
+                entity.getStatus(),
+                entity.getIniciadoEm(),
+                entity.getFinalizadoEm(),
+                entity.getEntregueEm(),
+                entity.getAtualizadoEm(),
+                entity.getAtendenteInicioId(),
+                entity.getMecanicoFinalId(),
+                execucoes
         );
-
-        os.setStatus(entity.getStatus());
-        os.setIniciadoEm(entity.getIniciadoEm());
-        os.setAtualizadoEm(entity.getAtualizadoEm());
-        os.setFinalizadoEm(entity.getFinalizadoEm());
-        os.setEntregueEm(entity.getEntregueEm());
-        os.setMecanicoResponsavelId(entity.getMecanicoFinalId());
-
-        if (entity.getServicos() != null) {
-            entity.getServicos().forEach(servicoEntity -> {
-
-                var execucao = execucaoServicoMapper.toDomain(servicoEntity);
-
-                os.getExecucaoServicos().add(execucao);
-            });
-        }
-
-        return os;
     }
 
     public OrdemServicoEntity toEntity(OrdemServico domain) {
@@ -71,12 +71,10 @@ public class OrdemServicoMapper {
                             .stream()
                             .map(execucao -> {
                                 var servicoEntity = execucaoServicoMapper.toEntity(execucao);
-
                                 servicoEntity.setOrdemServico(entity);
-
                                 return servicoEntity;
                             })
-                            .toList()
+                            .collect(Collectors.toList())
             );
         }
 
